--- a/cs3220_2025f/Part1/Part1.ipynb
+++ b/cs3220_2025f/Part1/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "e6dd1f09",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "08e20a12",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4   The Riverlands  NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "57ff373f",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "65cff9fa",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "4         1875.0         6000.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "1cc5e278",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "914b2f5f",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "227de151",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "ae4435a3",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "291216a2",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "03551eb5",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "4861c31f",
    "metadata": {},
    "outputs": [
@@ -580,7 +580,7 @@
        "       'Renly Baratheon', 'Robb Stark', 'Stannis Baratheon'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "dde8844c",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "  'font': {'color': 'white'}}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "88873359",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        " ['Stannis Baratheon', 'Joffrey/Tommen Baratheon']]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "36ca4d0d",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        " ['Stannis Baratheon', 'Balon/Euron Greyjoy']]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "0ae7bd56",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "id": "7f93dbc4",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "662584e1",
    "metadata": {},
    "outputs": [
@@ -813,44 +813,44 @@
     {
      "data": {
       "text/plain": [
-       "[{'value': 5,\n",
-       "  'title': 'Battle of the Golden Tooth, Battle of Riverrun, Sack of Winterfell, Battle of the Fords, The Red Wedding',\n",
+       "[{'Value': 5,\n",
+       "  'Title': 'Battle of the Golden Tooth, Battle of Riverrun, Sack of Winterfell, Battle of the Fords, The Red Wedding',\n",
        "  'from': 'Joffrey/Tommen Baratheon',\n",
        "  'to': 'Robb Stark',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 1,\n",
-       "  'title': \"Battle of Torrhen's Square\",\n",
+       " {'Value': 1,\n",
+       "  'Title': \"Battle of Torrhen's Square\",\n",
        "  'from': 'Robb Stark',\n",
        "  'to': 'Balon/Euron Greyjoy',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 5,\n",
-       "  'title': 'Battle of the Green Fork, Battle of the Whispering Wood, Battle of the Camps, Battle of Oxcross, Sack of Harrenhal',\n",
+       " {'Value': 5,\n",
+       "  'Title': 'Battle of the Green Fork, Battle of the Whispering Wood, Battle of the Camps, Battle of Oxcross, Sack of Harrenhal',\n",
        "  'from': 'Robb Stark',\n",
        "  'to': 'Joffrey/Tommen Baratheon',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 1,\n",
-       "  'title': 'Retaking of Deepwood Motte',\n",
+       " {'Value': 1,\n",
+       "  'Title': 'Retaking of Deepwood Motte',\n",
        "  'from': 'Stannis Baratheon',\n",
        "  'to': 'Balon/Euron Greyjoy',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 2,\n",
-       "  'title': 'Battle of the Blackwater, Siege of Winterfell',\n",
+       " {'Value': 2,\n",
+       "  'Title': 'Battle of the Blackwater, Siege of Winterfell',\n",
        "  'from': 'Stannis Baratheon',\n",
        "  'to': 'Joffrey/Tommen Baratheon',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 1,\n",
-       "  'title': 'Battle of Castle Black',\n",
+       " {'Value': 1,\n",
+       "  'Title': 'Battle of Castle Black',\n",
        "  'from': 'Stannis Baratheon',\n",
        "  'to': 'Mance Rayder',\n",
        "  'arrows': 'to'},\n",
-       " {'value': 1,\n",
-       "  'title': \"Siege of Storm's End\",\n",
+       " {'Value': 1,\n",
+       "  'Title': \"Siege of Storm's End\",\n",
        "  'from': 'Stannis Baratheon',\n",
        "  'to': 'Renly Baratheon',\n",
        "  'arrows': 'to'}]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "25efc4cd",
    "metadata": {},
    "outputs": [],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "id": "0c98d93b",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        "  'Renly Baratheon'}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "eab50ea2",
    "metadata": {},
    "outputs": [],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "b5485a9d",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
        "  'value': 5}]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "ee6de8f8",
    "metadata": {},
    "outputs": [
