--- a/cs3220_2025f/Part1/Part1.ipynb
+++ b/cs3220_2025f/Part1/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "e6dd1f09",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "08e20a12",
    "metadata": {},
    "outputs": [
@@ -268,14 +268,15 @@
        "4   The Riverlands  NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(\"C:/Users/conno_52qz545/CS3220 AI/cs3220_2025f/data/game-of-thrones-battles.csv\")\n",
-    "data.head()\n"
+    "data.head()\n",
+    "\n"
    ]
   },
   {
